feat(calendar): enhance localization for appointment details and client forms
Updated AppointmentDetailsModal.vue to utilize localized session note labels. Added 'dir="ltr"' attribute to phone input fields in ClientFormModal.vue and ClientQuickAddForm.vue for better text direction handling. Included new translations for session note labels in both English and Hebrew, improving accessibility and user experience across different languages.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -325,6 +325,7 @@
       "notesLabel": "Notes",
       "notesPlaceholder": "Optional notes about this appointment",
       "autoSaveHint": "Changes are saved automatically",
+      "sessionNoteLabel": "Session Note:",
       "sessionNoteFinalized": "Finalized",
       "sessionNoteDraft": "Draft",
       "continueEditing": "Continue Editing →",
